--- a/Manifests/ManifestsApple/com.apple.universalaccess.plist
+++ b/Manifests/ManifestsApple/com.apple.universalaccess.plist
@@ -13,7 +13,7 @@
 	<key>pfm_interaction</key>
 	<string>combined</string>
 	<key>pfm_last_modified</key>
-	<date>2025-06-27T12:30:09Z</date>
+	<date>2025-06-27T12:35:04Z</date>
 	<key>pfm_macos_min</key>
 	<string>10.9</string>
 	<key>pfm_platforms</key>
@@ -216,7 +216,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Reduce Transparency" in Display options</string>
+			<string>If 'true', enables “Reduce Transparency” in the Display options.</string>
 			<key>pfm_documentation_url</key>
 			<string>https://derflounder.wordpress.com/2025/06/18/setting-reduced-transparency-on-macos-sequoia/</string>
 			<key>pfm_macos_min</key>
@@ -232,7 +232,8 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Use grayscale" in the Display options</string>
+			<string>If 'true', enables “Use grayscale” in the Display options.
+    This option is deprecated in macOS 11.</string>
 			<key>pfm_macos_deprecated</key>
 			<string>11.0</string>
 			<key>pfm_name</key>
