--- a/Manifests/ManifestsApple/com.apple.universalaccess.plist
+++ b/Manifests/ManifestsApple/com.apple.universalaccess.plist
@@ -13,7 +13,7 @@
 	<key>pfm_interaction</key>
 	<string>combined</string>
 	<key>pfm_last_modified</key>
-	<date>2025-06-27T12:35:04Z</date>
+	<date>2025-06-27T12:36:33Z</date>
 	<key>pfm_macos_min</key>
 	<string>10.9</string>
 	<key>pfm_platforms</key>
@@ -126,7 +126,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Use scroll gesture with modifier keys to zoom" in the zoom options</string>
+			<string>If 'true', enables “Use scroll gesture” in the Zoom options.</string>
 			<key>pfm_name</key>
 			<string>closeViewScrollWheelToggle</string>
 			<key>pfm_title</key>
@@ -138,7 +138,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Use keyboard shortcuts to zoom" in the zoom options</string>
+			<string>If 'true', enables “Use keyboard shortcuts” in the Zoom options.</string>
 			<key>pfm_name</key>
 			<string>closeViewHotkeysEnabled</string>
 			<key>pfm_title</key>
@@ -148,7 +148,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>The maximal zoom magnification that can be set in the Zoom options in an integer value between 1 and 40</string>
+			<string>The maximum zoom level in the Zoom options.</string>
 			<key>pfm_name</key>
 			<string>closeViewNearPoint</string>
 			<key>pfm_range_max</key>
@@ -162,7 +162,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>The minimal zoom magnification that can be set in the Zoom options in an integer value between 1 and 40</string>
+			<string>The minimum zoom level in the Zoom options.</string>
 			<key>pfm_name</key>
 			<string>closeViewFarPoint</string>
 			<key>pfm_range_max</key>
@@ -178,9 +178,11 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Show preview rectangle" in the Zoom options</string>
+			<string>If 'true', enables “Show preview rectangle” in the Zoom options. Only available in macOS 10.15 and earlier.</string>
 			<key>pfm_macos_deprecated</key>
 			<string>11.0</string>
+			<key>pfm_macos_min</key>
+			<string>10.9</string>
 			<key>pfm_name</key>
 			<string>closeViewShowPreview</string>
 			<key>pfm_title</key>
@@ -192,7 +194,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Smooth images" in the Zoom options</string>
+			<string>If 'true', enables “Smooth images” in the Zoom options.</string>
 			<key>pfm_name</key>
 			<string>closeViewSmoothImages</string>
 			<key>pfm_title</key>
@@ -204,7 +206,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Invert colors" in Display options</string>
+			<string>If 'true', enables Invert Colors in Display Accommodations.</string>
 			<key>pfm_name</key>
 			<string>whiteOnBlack</string>
 			<key>pfm_title</key>
@@ -233,7 +235,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<false/>
 			<key>pfm_description</key>
 			<string>If 'true', enables “Use grayscale” in the Display options.
-    This option is deprecated in macOS 11.</string>
+This option is deprecated in macOS 11.</string>
 			<key>pfm_macos_deprecated</key>
 			<string>11.0</string>
 			<key>pfm_name</key>
@@ -263,7 +265,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<real>1</real>
 			<key>pfm_description</key>
-			<string>The size of the mouse cursor in a decimal value between 1 and 4, where 1 is normal and 4 is the maximum</string>
+			<string>The size of the cursor.</string>
 			<key>pfm_name</key>
 			<string>mouseDriverCursorSize</string>
 			<key>pfm_range_max</key>
@@ -273,13 +275,13 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_title</key>
 			<string>Cursor Size</string>
 			<key>pfm_type</key>
-			<string>real</string>
+			<string>integer</string>
 		</dict>
 		<dict>
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>VoiceOver provides spoken and brailled descriptions of items on the computer screen and provides control of the computer through the user of the keyboard</string>
+			<string>If 'true', enables Voice Over.</string>
 			<key>pfm_name</key>
 			<string>voiceOverOnOffKey</string>
 			<key>pfm_title</key>
@@ -291,7 +293,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Flash the screen when an alert sound occurs" in the Audio options</string>
+			<string>If 'true', enables “Flash the screen” in the Audio options.</string>
 			<key>pfm_name</key>
 			<string>flashScreen</string>
 			<key>pfm_title</key>
@@ -303,7 +305,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Play stereo audio as mono" in the Audio options</string>
+			<string>If 'true', plays stereo audio as mono.</string>
 			<key>pfm_name</key>
 			<string>stereoAsMono</string>
 			<key>pfm_title</key>
@@ -315,7 +317,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Sticky Keys" in the Keyboard options. Sticky keys allows modifier keys to be set without having to hold the key down</string>
+			<string>If 'true', enables Sticky Keys in the Keyboard options.</string>
 			<key>pfm_name</key>
 			<string>stickyKey</string>
 			<key>pfm_title</key>
@@ -327,7 +329,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Display pressed keys on screen" for Sticky Keys in Keyboard options</string>
+			<string>If 'true', enables “Display pressed keys on screen” for Sticky Keys.</string>
 			<key>pfm_name</key>
 			<string>stickyKeyShowWindow</string>
 			<key>pfm_title</key>
@@ -339,7 +341,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Beep when a modifier key is set" for Sticky Keys in Keyboard options</string>
+			<string>If 'true', enables the beep when a modifier key is set for Sticky Keys.</string>
 			<key>pfm_name</key>
 			<string>stickyKeyBeepOnModifier</string>
 			<key>pfm_title</key>
@@ -351,7 +353,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Slow Keys" in the Keyboard options. Slow keys adjusts the amount of time between when a key is pressed and when it is activated</string>
+			<string>If 'true', enables “Slow Keys” in the Keyboard options.</string>
 			<key>pfm_name</key>
 			<string>slowKey</string>
 			<key>pfm_title</key>
@@ -363,7 +365,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Use click key sounds" for Slow Keys in the Keyboard options</string>
+			<string>If 'true', enables “click key sounds” for Slow Keys.</string>
 			<key>pfm_name</key>
 			<string>slowKeyBeepOn</string>
 			<key>pfm_title</key>
@@ -375,7 +377,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<integer>250</integer>
 			<key>pfm_description</key>
-			<string>The acceptance delay for Slow Keys in miliseconds</string>
+			<string>The acceptance delay, in milliseconds, for Slow Keys.</string>
 			<key>pfm_name</key>
 			<string>slowKeyDelay</string>
 			<key>pfm_title</key>
@@ -389,7 +391,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Enable Mouse Keys" in the Pointer Control options. Mouse Keys allows the mouse pointer to be controlled using the keyboard number pad</string>
+			<string>If 'true', enables Mouse Keys in the Mouse &amp; Trackpad options.</string>
 			<key>pfm_name</key>
 			<string>mouseDriver</string>
 			<key>pfm_title</key>
@@ -401,19 +403,19 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<real>1</real>
 			<key>pfm_description</key>
-			<string>The initial delay before moving the mouse cursor with Mouse Keys in a decimal value representing seconds</string>
+			<string>The initial delay before moving the mouse with Mouse Keys.</string>
 			<key>pfm_name</key>
 			<string>mouseDriverInitialDelay</string>
 			<key>pfm_title</key>
 			<string>Initial delay</string>
 			<key>pfm_type</key>
-			<string>real</string>
+			<string>integer</string>
 			<key>pfm_value_unit</key>
 			<string>seconds</string>
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>The maximum speed for the cursor when using Mouse Keys in an integer value between 1 and 32, where 1 is the slowest and 32 is the fastest</string>
+			<string>The maximum speed for the cursor when using Mouse Keys.</string>
 			<key>pfm_name</key>
 			<string>mouseDriverMaxSpeed</string>
 			<key>pfm_range_max</key>
@@ -429,7 +431,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>Turns on "Ignore built-in trackpad when mouse or wireless trackpad is present" in the Mouse &amp; Trackpad options</string>
+			<string>If 'true', ignores the built-in trackpad.</string>
 			<key>pfm_name</key>
 			<string>mouseDriverIgnoreTrackpad</string>
 			<key>pfm_title</key>
@@ -440,13 +442,13 @@ During a profile replacement, the system updates payloads with the same 'Payload
 	</array>
 	<key>pfm_targets</key>
 	<array>
-		<string>user</string>
 		<string>system</string>
+		<string>user</string>
 	</array>
 	<key>pfm_title</key>
 	<string>Accessibility</string>
 	<key>pfm_unique</key>
-	<true/>
+	<false/>
 	<key>pfm_version</key>
 	<integer>3</integer>
 </dict>
