--- a/Manifests/ManagedPreferencesApplications/com.barebones.bbedit.plist
+++ b/Manifests/ManagedPreferencesApplications/com.barebones.bbedit.plist
@@ -4198,7 +4198,7 @@ To get the correct entry you will need to set the font in BBEdit first, then ope
 				<string>Only if the printed document is wrapped for display</string>
 			</array>
 			<key>pfm_title</key>
-			<string>Time stamp</string>
+			<string>Wrap Text to Printed Page</string>
 			<key>pfm_type</key>
 			<string>integer</string>
 		</dict>
