--- a/Manifests/ManagedPreferencesApplications/io.macadmins.Outset.plist
+++ b/Manifests/ManagedPreferencesApplications/io.macadmins.Outset.plist
@@ -4,31 +4,20 @@
 <dict>
 	<key>pfm_app_url</key>
 	<string>https://github.com/macadmins/outset/releases</string>
-	<key>pfm_documentation_url</key>
-	<string>https://github.com/macadmins/outset/wiki/Preferences</string>
-	<key>pfm_targets</key>
-	<array>
-		<string>system</string>
-		<string>user</string>
-	</array>
-	<key>pfm_platforms</key>
-	<array>
-		<string>macOS</string>
-	</array>
 	<key>pfm_description</key>
 	<string>Outset settings</string>
+	<key>pfm_documentation_url</key>
+	<string>https://github.com/macadmins/outset/wiki/Preferences</string>
 	<key>pfm_domain</key>
 	<string>io.macadmins.Outset</string>
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-07-11T08:58:48Z</date>
-	<key>pfm_title</key>
-	<string>Outset</string>
-	<key>pfm_unique</key>
-	<false/>
-	<key>pfm_version</key>
-	<integer>1</integer>
+	<date>2025-07-14T08:58:48Z</date>
+	<key>pfm_platforms</key>
+	<array>
+		<string>macOS</string>
+	</array>
 	<key>pfm_subkeys</key>
 	<array>
 		<dict>
@@ -137,59 +126,51 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>string</string>
 		</dict>
 		<dict>
-			<key>pfm_name</key>
-			<string>ignored_users</string>
-			<key>pfm_type</key>
-			<string>array</string>
-			<key>pfm_title</key>
-			<string>Ignored Users</string>
 			<key>pfm_description</key>
 			<string>An array of usernames to add to the ignored users list</string>
-			<key>pfm_description_reference</key>
-			<string>Optional. This is the original documentation's description</string>
+			<key>pfm_name</key>
+			<string>ignored_users</string>
 			<key>pfm_subkeys</key>
 			<array>
 				<dict>
+					<key>pfm_title</key>
+					<string>Username</string>
 					<key>pfm_type</key>
 					<string>string</string>
-					<key>pfm_title</key>
-					<string>Username</string>					
 				</dict>
 			</array>
+			<key>pfm_title</key>
+			<string>Ignored Users</string>
+			<key>pfm_type</key>
+			<string>array</string>
 		</dict>
 		<dict>
-			<key>pfm_name</key>
-			<string>wait_for_network</string>
-			<key>pfm_type</key>
-			<string>boolean</string>
-			<key>pfm_title</key>
-			<string>Wait for network</string>
+			<key>pfm_default</key>
+			<false/>
 			<key>pfm_description</key>
 			<string>Enable or disable wait for network</string>
-			<key>pfm_description_reference</key>
-			<string>Optional. This is the original documentation's description</string>
+			<key>pfm_name</key>
+			<string>wait_for_network</string>
+			<key>pfm_title</key>
+			<string>Wait for network</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
-			<key>pfm_name</key>
-			<string>network_timeout</string>
-			<key>pfm_type</key>
-			<string>integer</string>
-			<key>pfm_title</key>
-			<string>Network Timeout</string>
 			<key>pfm_description</key>
 			<string>Specify how long Outset waits for network activity</string>
-			<key>pfm_description_reference</key>
-			<string>Optional. This is the original documentation's description</string>
+			<key>pfm_name</key>
+			<string>network_timeout</string>
+			<key>pfm_title</key>
+			<string>Network Timeout</string>
+			<key>pfm_type</key>
+			<string>integer</string>
 		</dict>
 		<dict>
-			<key>pfm_name</key>
-			<string>sha256sum</string>
-			<key>pfm_type</key>
-			<string>dictionary</string>
-			<key>pfm_title</key>
-			<string>SHA256 Sum</string>
 			<key>pfm_description</key>
 			<string>Manage file verification checksums</string>
+			<key>pfm_name</key>
+			<string>sha256sum</string>
 			<key>pfm_subkeys</key>
 			<array>
 				<dict>
@@ -217,19 +198,34 @@ A profile can consist of payloads with different version numbers. For example, c
 					<string>6591abcec4e0bdcc75c9509cee7f6ddae0313fef00da9d19586431b88eada436</string>
 				</dict>
 			</array>
+			<key>pfm_title</key>
+			<string>SHA256 Sum</string>
+			<key>pfm_type</key>
+			<string>dictionary</string>
 		</dict>
 		<dict>
-			<key>pfm_name</key>
-			<string>verbose_logging</string>
-			<key>pfm_type</key>
-			<string>boolean</string>
-			<key>pfm_title</key>
-			<string>Verbose Logging</string>
+			<key>pfm_default</key>
+			<false/>
 			<key>pfm_description</key>
 			<string>Enable or disable verbose logging</string>
-			<key>pfm_description_reference</key>
-			<string>Optional. This is the original documentation's description</string>
+			<key>pfm_name</key>
+			<string>verbose_logging</string>
+			<key>pfm_title</key>
+			<string>Verbose Logging</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 	</array>
+	<key>pfm_targets</key>
+	<array>
+		<string>system</string>
+		<string>user</string>
+	</array>
+	<key>pfm_title</key>
+	<string>Outset</string>
+	<key>pfm_unique</key>
+	<false/>
+	<key>pfm_version</key>
+	<integer>1</integer>
 </dict>
 </plist>
