--- a/Manifests/ManagedPreferencesApplications/io.macadmins.Outset.plist
+++ b/Manifests/ManagedPreferencesApplications/io.macadmins.Outset.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-07-14T08:58:48Z</date>
+	<date>2025-07-15T13:07:27Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -214,6 +214,253 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>Verbose Logging</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>4.2.0</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+			<key>pfm_name</key>
+			<string>script_payloads</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>boot-every</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Boot-Every Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>boot-once</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Boot-Once Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>login-every</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Login-Every Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>login-once</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Login-Once Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>login-privileged-every</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Login-Privileged-Every Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>login-privileged-once</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Login-Privileged-Once Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>login-window</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Login-Window Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/macadmins/outset/wiki/Payloads</string>
+					<key>pfm_name</key>
+					<string>on-demand</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{key}}</string>
+							<key>pfm_title</key>
+							<string>Script Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_name</key>
+							<string>{{value}}</string>
+							<key>pfm_title</key>
+							<string>Script Data</string>
+							<key>pfm_type</key>
+							<string>data</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>On-Demand Action Scripts</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Script Payloads</string>
+			<key>pfm_type</key>
+			<string>dictionary</string>
 		</dict>
 	</array>
 	<key>pfm_targets</key>
