add autolaunchprotocols keys

--- a/Manifests/ManagedPreferencesApplications/com.microsoft.Edge.plist
+++ b/Manifests/ManagedPreferencesApplications/com.microsoft.Edge.plist
@@ -15,7 +15,7 @@
 	<key>pfm_interaction</key>
 	<string>combined</string>
 	<key>pfm_last_modified</key>
-	<date>2024-09-04T15:50:02Z</date>
+	<date>2025-11-04T10:00:02Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -269,6 +269,8 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>AudioCaptureAllowed</string>
 					<string>AudioCaptureAllowedUrls</string>
 					<string>AutoImportAtFirstRun</string>
+					<string>AutoLaunchProtocolsComponentEnabled</string>
+					<string>AutoLaunchProtocolsFromOrigins</string>
 					<string>AutoOpenAllowedForURLs</string>
 					<string>AutoOpenFileTypes</string>
 					<string>AutoFillEnabled</string>
@@ -7749,6 +7751,110 @@ URL patterns in this policy should not clash with ones configured via WebUsbAskF
 			<key>pfm_type</key>
 			<string>array</string>
 		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>85</string>
+			<key>pfm_description</key>
+			<string>Define a list of protocols that can launch an external application from listed origins without prompting the user. If this policy is set, a protocol will only be permitted to launch an external application without prompting by policy if the protocol is listed, and the origin of the site trying to launch the protocol matches one of the origin patterns in that protocol's allowed_origins list.</string>
+			<key>pfm_description_reference</key>
+			<string>Allows you to set a list of protocols, and for each protocol an associated list of allowed origin patterns, that can launch an external application without prompting the user. The trailing separator should not be included when listing the protocol, so list "skype" instead of "skype:" or "skype://".
+
+If this policy is set, a protocol will only be permitted to launch an external application without prompting by policy if the protocol is listed, and the origin of the site trying to launch the protocol matches one of the origin patterns in that protocol's allowed_origins list. If either condition is false the external protocol launch prompt will not be omitted by policy.
+
+If you don't configure this policy, no protocols can launch without a prompt. Users can opt out of prompts on a per-protocol/per-site basis unless the ExternalProtocolDialogShowAlwaysOpenCheckbox policy is set to Disabled. This policy has no impact on per-protocol/per-site prompt exemptions set by users.
+
+The origin matching patterns use a similar format to those for the URLBlocklist policy, which are documented at https://go.microsoft.com/fwlink/?linkid=2095322.
+
+However, origin matching patterns for this policy cannot contain "/path" or "@query" elements. Any pattern that does contain a "/path" or "@query" element will be ignored.
+
+This policy does not work as expected with file://* wildcards.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://learn.microsoft.com/en-au/deployedge/microsoft-edge-browser-policies/autolaunchprotocolsfromorigins</string>
+			<key>pfm_name</key>
+			<string>AutoLaunchProtocolsFromOrigins</string>
+			<key>pfm_note</key>
+			<string>The origin matching patterns use a similar format to those for the URLBlocklist policy, which are documented at https://go.microsoft.com/fwlink/?linkid=2095322.</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_hidden</key>
+					<string>container</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_app_min</key>
+							<string>85</string>
+							<key>pfm_description</key>
+							<string>A list of allowed origin patterns for the specified protocol.</string>
+							<key>pfm_name</key>
+							<string>allowed_origins</string>
+							<key>pfm_note</key>
+							<string>The origin matching patterns use a similar format to those for the URLBlocklist policy, which are documented at https://go.microsoft.com/fwlink/?linkid=2095322.</string>
+							<key>pfm_subkeys</key>
+							<array>
+								<dict>
+									<key>pfm_format</key>
+									<string>^https?://.*</string>
+									<key>pfm_name</key>
+									<string>allowed_originsItem</string>
+									<key>pfm_type</key>
+									<string>string</string>
+								</dict>
+							</array>
+							<key>pfm_title</key>
+							<string>Allowed Origins</string>
+							<key>pfm_type</key>
+							<string>array</string>
+						</dict>
+						<dict>
+							<key>pfm_app_min</key>
+							<string>85</string>
+							<key>pfm_format</key>
+							<string>^((?!\:).)*$</string>
+							<key>pfm_name</key>
+							<string>protocol</string>
+							<key>pfm_note</key>
+							<string>The trailing separator should not be included when listing the protocol.</string>
+							<key>pfm_title</key>
+							<string>Protocol</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_value_placeholder</key>
+							<string>spotify</string>
+						</dict>
+					</array>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Allow protocols to auto launch external applications</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>96</string>
+			<key>pfm_default</key>
+			<true/>
+			<key>pfm_description</key>
+			<string>Specifies whether the AutoLaunch Protocols component should be enabled.
+This component allows Microsoft to provide a list similar to that of the AutoLaunchProtocolsFromOrigins policy, allowing certain external protocols to launch without prompt or blocking certain protocols (on specified origins). By default, this component is enabled.</string>
+			<key>pfm_description_reference</key>
+			<string>This component allows Microsoft to provide a list similar to that of the AutoLaunchProtocolsFromOrigins policy, allowing certain external protocols to launch without prompt or blocking certain protocols (on specified origins). By default, this component is enabled.
+If you enable or don't configure this policy, the AutoLaunch Protocols component is enabled.
+If you disable this policy, the AutoLaunch Protocols component is disabled.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://learn.microsoft.com/en-au/deployedge/microsoft-edge-browser-policies/autolaunchprotocolscomponentenabled</string>
+			<key>pfm_name</key>
+			<string>AutoLaunchProtocolsComponentEnabled</string>
+			<key>pfm_title</key>
+			<string>Enable the AutoLaunch Protocols component</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+			<key>pfm_note</key>
+			<string>The protocols are found in '~/Library/Application Support/Microsoft Edge/AutoLaunchProtocolsComponent/[version]/protocols.json'</string>
+		</dict>
 	</array>
 	<key>pfm_targets</key>
 	<array>
@@ -7760,6 +7866,6 @@ URL patterns in this policy should not clash with ones configured via WebUsbAskF
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>15</integer>
+	<integer>16</integer>
 </dict>
 </plist>
