--- a/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
+++ b/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
@@ -1724,7 +1724,7 @@ A profile can consist of payloads with different version numbers. For example, c
 						</dict>
 						<dict>
 							<key>pfm_description</key>
-							<string>The label is used as the name of the action in display.</string>
+							<string>The icon shown for the action.</string>
 							<key>pfm_name</key>
 							<string>icon</string>
 							<key>pfm_title</key>
