--- a/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
+++ b/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
@@ -279,7 +279,7 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>Admins can use this value to customize the osquery timeout value and fine-tune device posture checks.</string>
+			<string>Admins can use this value to customize the osquery timeout value and fine-tune device posture checks</string>
 			<key>pfm_documentation_url</key>
 			<string>https://help.okta.com/oie/en-us/content/topics/identity-engine/devices/managed-app-configs-macos.htm#OktaVeri9</string>
 			<key>pfm_name</key>
